fix python bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(rgf SHARED
     src/rolling_guidance_filter.cu
     # src/rolling_guidance_filter.cpp
     src/gaussian_blur.cu
+    src/utils.cu
 )
 set_target_properties(rgf PROPERTIES POSITION_INDEPENDENT_CODE ON)
 target_include_directories(rgf
