add python setup tools

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,52 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
 build/
-__pycache__
-_*
-test/out/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
+# CMake
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+*.cmake
+!CMakeLists.txt
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Build
+build/
+dist/
+*.so
+*.dylib
+*.dll
+
+# OS
+*.log
+*.out
+*.err
+*.log.*
+*.out.*
+*.err.*
 ._.*
-.vscode
+.DS_Store
