--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-numpy==1.26.4
-opencv-python-headless==4.11.0.86
-pybind11==2.12.0
+numpy>=1.25.0
+opencv-python>=4.5.0
+setuptools>=42
+wheel
+cmake>=3.18
+ninja
+pybind11>=2.10.0
