--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "rgf"
+name = "rgf_cuda"
 version = "0.1.0"
 description = "CUDA-accelerated Rolling Guidance Filter implementation"
 readme = "README.md"
@@ -24,11 +24,11 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 package-dir = {"" = "python"}
-packages = ["rgf"]
+packages = ["rgf_cuda"]
 include-package-data = true
 
 [tool.setuptools.dynamic]
-version = {attr = "rgf.__version__"} 
+version = {attr = "rgf_cuda.__version__"} 
 
 [tool.uv]
 dev-dependencies = ["pytest", "pytest-cov"]
@@ -36,4 +36,4 @@ dev-dependencies = ["pytest", "pytest-cov"]
 [tool.pytest.ini_options]
 testpaths = ["tests/python"]
 python_files = ["test_*.py"]
-addopts = "--cov=rgf --cov-report=term-missing"
+addopts = "--cov=rgf_cuda --cov-report=term-missing"
