--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "CUDA-accelerated Rolling Guidance Filter implementation"
 readme = "README.md"
 requires-python = ">=3.12"
-license = "3-clause BSD"
+license = "MIT"
 authors = [
     {name = "Your Name", email = "your.email@example.com"}
 ]
